# OOPCourseWork

./: .gitignore  CMakeLists.txt  auth.h  cashier.h  chef.h  common.cpp  common.h  consumer.cpp  consumer.h  demo.cpp  fileio.cpp  fileio.h  goods.txt  main.cpp  server.h  tables.txt  users.txt
include/: admin.h  boss.h  utils.h
src/: CMakeLists.txt  main.cpp  utils.cpp
test/: CMakeLists.txt
